# cheatui

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TUTORIAL.md
.github/workflows/: build.yml
examples/: demo.cpp  getting_started.cpp
include/: Animation.hpp  Canvas.hpp  Color.hpp  Config.hpp  Easing.hpp  Font5x7.hpp  Input.hpp  Menu.hpp  Renderer.hpp  StrokeFont.hpp  Style.hpp  Tab.hpp  Theme.hpp  Themes.hpp  Widgets.hpp  cheatui.hpp
src/: Canvas.cpp  Menu.cpp  Widgets.cpp
tools/: raw_to_png.py
